--- a/views/admin/adminlogin.ejs
+++ b/views/admin/adminlogin.ejs
@@ -77,7 +77,7 @@
                             </div>
                             <!-- form-group// -->
                             <div class="mb-3">
-                                <input class="form-control"  id="loginPassword" name="password"  value="123456"  placeholder="Password" type="password" required/>
+                                <input class="form-control"  id="loginPassword" name="password"   placeholder="Password" type="password" required/>
                                 <span id="loginPasswordError" cclass="error" style="display: none; color: red;">Password must be at least 6 characters</span>
                             </div>
                             <!-- form-group// -->
