--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,7 +29,10 @@
                         <a href="#">Links</a>
                         <ul>
                             <li><a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a></li>
-                            <li><a href="/wishlist"><i class="icon-heart-o"></i>My Wishlist <span>(0)</span></a></li>
+                            <li><a href="/wishlist"><i class="icon-heart-o"></i>My Wishlist <span>
+                             <%= wishlistCount %>
+                                
+                            </span></a></li>
                             <li><a href="/about"><i class="icon-info-circle"></i>About Us</a></li>
                             <!-- <li><a href="/contact"><i class="icon-envelope"></i>Contact Us</a></li> -->
                             
