--- a/views/admin/orderDetails.ejs
+++ b/views/admin/orderDetails.ejs
@@ -146,7 +146,7 @@
                 <div class="content-header">
                     <div>
                         <h2 class="content-title card-title">Order Detail</h2>
-                        <p>Details for Order ID: <%= order._id %></p> <!-- Dynamic Order ID -->
+                        <p>Details for Order ID: <%= order._id  || '123095653473'%></p> <!-- Dynamic Order ID -->
                     </div>
                 </div>
                 <div class="card">
@@ -179,11 +179,11 @@
                                     <div class="text">
                                         <h6 class="mb-1">Customer</h6>
                                         <p class="mb-1">
-                                            <%= order.user.name %> <br /> <!-- Dynamic Customer Name -->
-                                            <%= order.user.email %> <br /> <!-- Dynamic Customer Email -->
-                                            <%= order.user.phone %> <!-- Dynamic Customer Phone -->
+                                            <%= order.user ? order.user.name : 'Unknown' %> <br /> <!-- Dynamic Customer Name -->
+                                            <%= order.user ? order.user.email : 'No email' %> <br /> <!-- Dynamic Customer Email -->
+                                            <%= order.user ? order.user.phone : 'No number' %> <!-- Dynamic Customer Phone -->
                                         </p>
-                                        <a href="#">View profile</a>
+                                        <!-- <a href="#">View profile</a> -->
                                     </div>
                                 </article>
                             </div>
@@ -199,7 +199,7 @@
                                             Pay method: <%= order.paymentMethod %> <br /> <!-- Dynamic Payment Method -->
                                             Status: <%= order.status %> <!-- Dynamic Order Status -->
                                         </p>
-                                        <a href="#">Download info</a>
+                                        <!-- <a href="#">Download info</a> -->
                                     </div>
                                 </article>
                             </div>
