--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -61,88 +61,80 @@
         </nav>
     
         <div class="page-content">
-            <div class="container">
-              <table class="table table-wishlist table-mobile">
-                <thead>
-                  <tr>
-                    <th>Product</th>
-                    <th>Price</th>
-                    <th>Stock Status</th>
-                    <th></th>
-                    <th></th>
-                  </tr>
-                </thead>
-          
-                <tbody>
-                    <% products.forEach(function(item) { %>
-                      <tr>
-                        <td class="product-col">
-                          <div class="product">
-                            <figure class="product-media">
-                              <a href="#">
-                                <% if (item.products && item.products.imagePaths && item.products.imagePaths.length > 0) { %>
-                                  <!-- Display product image -->
-                                  <img src="<%= item.products.imagePaths[0] %>" alt="Product image">
-                                <% } else { %>
-                                  <!-- Display default image if no image exists -->
-                                  <img src="/path/to/default-image.jpg" alt="No Image Available">
-                                <% } %>
-                              </a>
-                            </figure>
-                            <h3 class="product-title">
-                              <a href="#"><%= item.products.productName %></a>
-                            </h3>
-                          </div>
-                        </td>
-                  
-                        <!-- Price Column -->
-                        <td class="price-col">
-                          <% if (item.products.discount > 0) { %>
-                              <span class="original-price">$<%= item.products.price.toFixed(2) %></span> <!-- Original price -->
-                              <% if (item.products.finalPrice) { %>
-                                  <span class="offer-price">$<%= item.products.finalPrice.toFixed(2) %></span> <!-- Discounted price -->
-                              <% } else { %>
-                                  <span class="offer-price">$<%= item.products.price.toFixed(2) %></span> <!-- Fallback to original price -->
-                              <% } %>
-                          <% } else { %>
-                              $<%= item.products.price.toFixed(2) %> <!-- No discount, show original price -->
-                          <% } %>
-                      </td>
-                      
-                      
-                  
-                        <!-- Action Column: Add to Cart or Go to Cart -->
-                        <td class="action-col">
-                          <% if (item.products   && item.products.stock > 0) { %>
-                            <% if (item.isInCart) { %>
-                              <!-- Product already in the cart, show "Go to Cart" button -->
-                              <a href="/cart" class="btn btn-block btn-outline-primary-2">
-                                <i class="icon-cart-plus"></i>Go to Cart
-                              </a>
-                            <% } else { %>
-                              <!-- Product not in the cart, show "Add to Cart" button -->
-                              <button class="btn btn-block btn-outline-primary-2 btn-add-to-cart" data-product-id="<%= item.products._id %>">
-                                <i class="icon-cart-plus"></i>Add to Cart
-                              </button>
-                            <% } %>
-                          <% } else { %>
-                            <!-- If the product is out of stock, show "Out of Stock" button -->
-                            <button class="btn btn-block btn-outline-primary-2 disabled">Out of Stock</button>
-                          <% } %>
-                        </td>
-                  
-                        <!-- Remove Column -->
-                        <td class="remove-col">
-                          <button class="btn-remove" data-product-id="<%= item.products._id %>"><i class="icon-close"></i></button>
-                        </td>
-                      </tr>
-                    <% }) %>
-                  </tbody>
-                  
-              </table><!-- End .table table-wishlist -->
-               
-            </div>
-        </div>
+          <div class="container">
+              <% if (products.length > 0) { %>
+                  <table class="table table-wishlist table-mobile">
+                      <thead>
+                          <tr>
+                              <th>Product</th>
+                              <th>Price</th>
+                              <th>Stock Status</th>
+                              <th></th>
+                              <th></th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <% products.forEach(function(item) { %>
+                              <tr>
+                                  <td class="product-col">
+                                      <div class="product">
+                                          <figure class="product-media">
+                                              <a href="#">
+                                                  <% if (item.products && item.products.imagePaths && item.products.imagePaths.length > 0) { %>
+                                                      <img src="<%= item.products.imagePaths[0] %>" alt="Product image">
+                                                  <% } else { %>
+                                                      <img src="/path/to/default-image.jpg" alt="No Image Available">
+                                                  <% } %>
+                                              </a>
+                                          </figure>
+                                          <h3 class="product-title">
+                                              <a href="#"><%= item.products.productName %></a>
+                                          </h3>
+                                      </div>
+                                  </td>
+                                  <td class="price-col">
+                                      <% if (item.products.discount > 0) { %>
+                                          <span class="original-price">$<%= item.products.price.toFixed(2) %></span>
+                                          <% if (item.products.finalPrice) { %>
+                                              <span class="offer-price">$<%= item.products.finalPrice.toFixed(2) %></span>
+                                          <% } else { %>
+                                              <span class="offer-price">$<%= item.products.price.toFixed(2) %></span>
+                                          <% } %>
+                                      <% } else { %>
+                                          $<%= item.products.price.toFixed(2) %>
+                                      <% } %>
+                                  </td>
+                                  <td class="action-col">
+                                      <% if (item.products && item.products.stock > 0) { %>
+                                          <% if (item.isInCart) { %>
+                                              <a href="/cart" class="btn btn-block btn-outline-primary-2">
+                                                  <i class="icon-cart-plus"></i>Go to Cart
+                                              </a>
+                                          <% } else { %>
+                                              <button class="btn btn-block btn-outline-primary-2 btn-add-to-cart" data-product-id="<%= item.products._id %>">
+                                                  <i class="icon-cart-plus"></i>Add to Cart
+                                              </button>
+                                          <% } %>
+                                      <% } else { %>
+                                          <button class="btn btn-block btn-outline-primary-2 disabled">Out of Stock</button>
+                                      <% } %>
+                                  </td>
+                                  <td class="remove-col">
+                                      <button class="btn-remove" data-product-id="<%= item.products._id %>"><i class="icon-close"></i></button>
+                                  </td>
+                              </tr>
+                          <% }) %>
+                      </tbody>
+                  </table>
+              <% } else { %>
+                  <div class="text-center">
+                      <h4> <strong> Your wishlist is empty. </strong> </h4>
+                      <a href="/productsPage" class="btn btn-primary btn-sm" style="width: 50px;">Continue Shopping</a>
+                  </div>
+              <% } %>
+          </div>
+      </div>
+      
     </div>
 </main>
   
