some minor changes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,7 @@
                              <%= wishlistCount %>
                                 
                             </span></a></li>
-                            <li><a href="/about"><i class="icon-info-circle"></i>About Us</a></li>
+                            <!-- <li><a href="/about"><i class="icon-info-circle"></i>About Us</a></li> -->
                             <!-- <li><a href="/contact"><i class="icon-envelope"></i>Contact Us</a></li> -->
                             
                             <% console.log("Current user in EJS:", user); %> <!-- Add this line for debugging -->
